delete if validation fails, patch endpoint
