# packages/backend/openapi.yaml
@@ -174,12 +174,6 @@ paths:
     post:
       operationId: LinksController_create
       parameters: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CreateLinkDto"
       responses:
         "201":
           description: ""
@@ -233,12 +227,6 @@ paths:
           in: path
           schema:
             type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UpdateLinkDto"
       responses:
         "200":
           description: ""
@@ -301,40 +289,6 @@ components:
     UpdateSubmissionDto:
       type: object
       properties: {}
-    CreateLinkDto:
-      type: object
-      properties:
-        url:
-          type: string
-          description: The url to the link
-          example: https://example.com
-        title:
-          type: string
-          description: The title of the link
-          example: Example Link
-        slug:
-          type: string
-          description: The slug corresponding to the link
-          example: example-link
-        description:
-          type: string
-          description: The description corresponding to the link
-          example: This is an example link
-        keywords:
-          description: Some keywords that describe the website
-          example:
-            &a3
-            - example
-            - link
-          type: array
-          items:
-            type: string
-      required:
-        - url
-        - title
-        - slug
-        - description
-        - keywords
     Link:
       type: object
       properties:
@@ -378,31 +332,6 @@ components:
         - description
         - iconUrl
         - keywords
-    UpdateLinkDto:
-      type: object
-      properties:
-        url:
-          type: string
-          description: The url to the link
-          example: https://example.com
-        title:
-          type: string
-          description: The title of the link
-          example: Example Link
-        slug:
-          type: string
-          description: The slug corresponding to the link
-          example: example-link
-        description:
-          type: string
-          description: The description corresponding to the link
-          example: This is an example link
-        keywords:
-          description: Some keywords that describe the website
-          example: *a3
-          type: array
-          items:
-            type: string
     slugAvailable:
       type: object
       properties:
